# lasers-and-bots

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTROLS.txt  README.md  clang-format-all.sh  version.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
Classes/: AppDelegate.cpp  AppDelegate.h  LaserAndBotsApp.cpp  LaserAndBotsApp.h  Launcher.cpp  Launcher.h  laser_and_bots_app.cpp  laser_and_bots_app.h  laser_and_bots_launcher.cpp  laser_and_bots_launcher.h
Classes/game/: BackgroundLayer.cpp  BackgroundLayer.h  BarrelObject.cpp  BarrelObject.h  BoxObject.cpp  BoxObject.h  DoorObject.cpp  DoorObject.h  HarmObject.cpp  HarmObject.h  Laser.cpp  Laser.h  LaserObject.cpp  LaserObject.h  OnOffObject.cpp  OnOffObject.h  Robot.cpp  Robot.h  RobotFragment.cpp  RobotFragment.h  RobotObject.cpp  RobotObject.h  SawObject.cpp  SawObject.h  SwitchObject.cpp  SwitchObject.h  background_layer.cpp  background_layer.h  barrel_object.cpp  barrel_object.h  box_object.cpp  box_object.h  door_object.cpp  door_object.h  harm_object.cpp  harm_object.h  laser_object.cpp  laser_object.h  on_off_object.cpp  on_off_object.h  (+8 more)
Classes/menu/: AboutMenu.cpp  AboutMenu.h  BasicMenu.cpp  BasicMenu.h  CreditsMenu.cpp  CreditsMenu.h  LicenseMenu.cpp  LicenseMenu.h  MainMenu.cpp  MainMenu.h  OptionsMenu.cpp  OptionsMenu.h  PlayMenu.cpp  PlayMenu.h  about_menu.cpp  about_menu.h  basic_menu.cpp  basic_menu.h  credits_menu.cpp  credits_menu.h  license_menu.cpp  license_menu.h  main_menu.cpp  main_menu.h  options_menu.cpp  options_menu.h  play_menu.cpp  play_menu.h
Classes/misc/: LevelManager.cpp  LevelManager.h  level_manager.cpp  level_manager.h
Classes/scenes/: GameScene.cpp  GameScene.h  LauncherScene.cpp  LauncherScene.h  LoadingScene.cpp  LoadingScene.h  MainScene.cpp  MainScene.h  MenuScene.cpp  MenuScene.h  game_scene.cpp  game_scene.h  launcher_scene.cpp  launcher_scene.h  loading_scene.cpp  loading_scene.h  menu_scene.cpp  menu_scene.h
Classes/ui/: GameUI.cpp  GameUI.h  GameUi.cpp  GameUi.h  LevelCompleted.cpp  LevelCompleted.h  MessageWindow.cpp  MessageWindow.h  OnScreenButton.cpp  OnScreenButton.h  PauseWindow.cpp  PauseWindow.h  ResizableWindow.cpp  ResizableWindow.h  ScrollingText.cpp  ScrollingText.h  SliderObject.cpp  SliderObject.h  TextButton.cpp  TextButton.h  TextToggle.cpp  TextToggle.h  VirtualJoyStick.cpp  VirtualJoyStick.h  game_ui.cpp  game_ui.h  level_completed.cpp  level_completed.h  message_window.cpp  message_window.h  on_screen_button.cpp  on_screen_button.h  pause_window.cpp  pause_window.h  resizable_window.cpp  resizable_window.h  scrolling_text.cpp  scrolling_text.h  slider_object.cpp  slider_object.h  (+6 more)
Classes/utils/: cocos2dClass.snippet  utils.cpp  utils.h
Classes/utils/audio/: AudioHelper.cpp  AudioHelper.h  audio_helper.cpp  audio_helper.h
Classes/utils/base/app/: BasicApp.cpp  BasicApp.h  LauncherApp.cpp  LauncherApp.h  basic_app.cpp  basic_app.h  launcher_app.cpp  launcher_app.h
Classes/utils/base/nodes/: CustomDrawNode.cpp  CustomDrawNode.h  custom_draw_node.cpp  custom_draw_node.h
Classes/utils/base/scene/: BasicScene.cpp  BasicScene.h  GridScene.cpp  GridScene.h  TiledScene.cpp  TiledScene.h  basic_scene.cpp  basic_scene.h  grid_scene.cpp  grid_scene.h  physics_tiled_scene.cpp  physics_tiled_scene.h  tiled_scene.cpp  tiled_scene.h
Classes/utils/base/sprite/: GameObject.cpp  GameObject.h  game_object.cpp  game_object.h
Classes/utils/base/ui/: BaseButton.cpp  BaseButton.h  TextButton.cpp  TextButton.h
Classes/utils/controller/: InputController.cpp  InputController.h  input_controller.cpp  input_controller.h
Classes/utils/physics/: PhysicsGameObject.cpp  PhysicsGameObject.h  PhysicsShapeCache.cpp  PhysicsShapeCache.h  PhysicsTiledScene.cpp  PhysicsTiledScene.h  physics_body_cache.cpp  physics_body_cache.h  physics_game_object.cpp  physics_game_object.h  physics_shape_cache.cpp  physics_shape_cache.h  physics_tiled_scene.cpp  physics_tiled_scene.h
Media/: 033_window.xcf  bar.xcf  generate-iconset.py  head.xcf  icon.xcf  join_tiles.py  laser_piece.xcf  selection.xcf  shape_converter.py  slider.xcf  star.xcf
Media/backgrounds/: backgrounds.tps
Media/maps/: map.tmx  tiles.tps
Media/objects/: objects.tps
Media/robot/: robot.tps
Media/shapes/: physics_project.json  shapes.pes
Media/sounds/: 78513__irjames__cymbal.aiff  95058__plamdi1__explosion.aiff  credit.txt
Media/tiles/: objecttypes.xml
Media/ui/: ui.tps
Resources/backgrounds/: backgrounds-1.plist  backgrounds-2.plist  backgrounds-3.plist
Resources/credits/: about.xml  credits.xml  license.xml
Resources/fonts/: general.fnt  general_72.fnt
Resources/levels/: levels.plist
Resources/maps/: demo_map.tmx  intro.tmx  level_001.tmx  level_002.tmx  level_003.tmx  level_004.tmx  level_005.tmx  level_006.tmx  map.tmx  objecttypes.xml
Resources/objects/: objects.plist
Resources/robot/: robot.plist  robot1.plist  robot2.plist  robot_0.plist  robot_1.plist
Resources/shapes/: shapes.json  shapes.plist
Resources/ui/: ui-0.plist  ui-1.plist  ui-2.plist  ui.plist
Resources/version/: version.plist
proj.android/: gradle.properties  settings.gradle
proj.android/app/: AndroidManifest.xml  build.gradle
proj.android/app/jni/hellocpp/: main.cpp
proj.android/app/res/values/: strings.xml
proj.android/app/src/org/cocos2dx/cpp/: AppActivity.java
proj.android/gradle/wrapper/: gradle-wrapper.properties
proj.ios_mac/ios/: AppController.h  AppController.mm  Info.plist  RootViewController.h  RootViewController.mm  main.m
proj.ios_mac/lasers-and-bots.xcodeproj/: project.pbxproj
proj.ios_mac/mac/: Icon.icns  Info.plist  main.cpp
proj.win32/: lasers-and-bots.sln  lasers-and-bots.sln.DotSettings  lasers-and-bots.vcxproj  lasers-and-bots.vcxproj.filters  main.cpp  main.h  no_rule_set.ruleset  resource.h
